--- a/arch/arm64/configs/softiron1000_defconfig
+++ b/arch/arm64/configs/softiron1000_defconfig
@@ -364,9 +364,11 @@ CONFIG_PWM=y
 CONFIG_PHY_XGENE=y
 # CONFIG_PHY_EXYNOS_DP_VIDEO is not set
 # CONFIG_PHY_EXYNOS_MIPI_VIDEO is not set
+CONFIG_HISI_PMU=y
 CONFIG_QCOM_L2_PMU=y
 CONFIG_QCOM_L3_PMU=y
 CONFIG_XGENE_PMU=y
+CONFIG_ARM_SPE_PMU=m
 CONFIG_STM_SOURCE_CONSOLE=y
 CONFIG_FIRMWARE_MEMMAP=y
 CONFIG_RASPBERRYPI_FIRMWARE=y
@@ -450,7 +452,6 @@ CONFIG_CORESIGHT_SINK_ETBV10=y
 CONFIG_CORESIGHT_SOURCE_ETM4X=y
 CONFIG_CORESIGHT_STM=y
 CONFIG_CORESIGHT_CPU_DEBUG=y
-CONFIG_KEYS=y
 CONFIG_PERSISTENT_KEYRINGS=y
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_SECURITY=y
@@ -471,7 +472,6 @@ CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_DEV_CCP=y
 CONFIG_CRYPTO_DEV_CCP_DD=y
 # CONFIG_CRYPTO_DEV_CCP_CRYPTO is not set
-CONFIG_PKCS7_MESSAGE_PARSER=y
 CONFIG_SYSTEM_BLACKLIST_KEYRING=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
