softiron1000_debug_defconfig: update & ARM_SPE_PMU=m

--- a/arch/arm64/configs/softiron1000_debug_defconfig
+++ b/arch/arm64/configs/softiron1000_debug_defconfig
@@ -349,6 +349,7 @@ CONFIG_PHY_XGENE=y
 # CONFIG_PHY_EXYNOS_DP_VIDEO is not set
 # CONFIG_PHY_EXYNOS_MIPI_VIDEO is not set
 CONFIG_XGENE_PMU=y
+CONFIG_ARM_SPE_PMU=m
 CONFIG_STM_SOURCE_CONSOLE=y
 CONFIG_FIRMWARE_MEMMAP=y
 CONFIG_RASPBERRYPI_FIRMWARE=y
@@ -461,7 +462,6 @@ CONFIG_CORESIGHT_SOURCE_ETM4X=y
 CONFIG_CORESIGHT_QCOM_REPLICATOR=y
 CONFIG_CORESIGHT_STM=y
 CONFIG_CORESIGHT_CPU_DEBUG=y
-CONFIG_KEYS=y
 CONFIG_PERSISTENT_KEYRINGS=y
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_SECURITY=y
@@ -483,7 +483,6 @@ CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_DEV_CCP=y
 CONFIG_CRYPTO_DEV_CCP_DD=y
 # CONFIG_CRYPTO_DEV_CCP_CRYPTO is not set
-CONFIG_PKCS7_MESSAGE_PARSER=y
 CONFIG_SYSTEM_BLACKLIST_KEYRING=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
