--- a/arch/arm64/boot/dts/arm/juno-r2.dts
+++ b/arch/arm64/boot/dts/arm/juno-r2.dts
@@ -203,18 +203,18 @@
 
 	pmu_a72 {
 		compatible = "arm,cortex-a72-pmu";
-		interrupts = <GIC_SPI 02 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 06 IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <GIC_SPI 02 IRQ_TYPE_LEVEL_HIGH 0>,
+			     <GIC_SPI 06 IRQ_TYPE_LEVEL_HIGH 0>;
 		interrupt-affinity = <&A72_0>,
 				     <&A72_1>;
 	};
 
 	pmu_a53 {
 		compatible = "arm,cortex-a53-pmu";
-		interrupts = <GIC_SPI 18 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 22 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 26 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 30 IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <GIC_SPI 18 IRQ_TYPE_LEVEL_HIGH 0>,
+			     <GIC_SPI 22 IRQ_TYPE_LEVEL_HIGH 0>,
+			     <GIC_SPI 26 IRQ_TYPE_LEVEL_HIGH 0>,
+			     <GIC_SPI 30 IRQ_TYPE_LEVEL_HIGH 0>;
 		interrupt-affinity = <&A53_0>,
 				     <&A53_1>,
 				     <&A53_2>,
