softiron_defconfig: enable CONFIG_RANDOMIZE_BASE for Petes bug replication

--- a/arch/arm64/configs/softiron1000_defconfig
+++ b/arch/arm64/configs/softiron1000_defconfig
@@ -136,6 +136,7 @@ CONFIG_ZSMALLOC=y
 CONFIG_SECCOMP=y
 # CONFIG_ARM64_HW_AFDBM is not set
 # CONFIG_ARM64_PAN is not set
+CONFIG_RANDOMIZE_BASE=y
 CONFIG_ARM64_ACPI_PARKING_PROTOCOL=y
 CONFIG_COMPAT=y
 CONFIG_PM_DEBUG=y
